<project>
	<modelVersion>4.0.0</modelVersion>

	<parent>
		<groupId>org.dce</groupId>
		<artifactId>elite-dangerous-overlay-parent</artifactId>
		<version>1.4.56</version>
		<relativePath>reactor/pom.xml</relativePath>
	</parent>

	<artifactId>EliteDangerousOverlay</artifactId>

	<name>EliteDangerousOverlay</name>
	<description>EliteDangerousOverlay</description>

	<properties>
		<maven.compiler.release>21</maven.compiler.release>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

		<!-- Fat jar settings -->
		<main.class>org.dce.ed.EliteDangerousOverlay</main.class>
		<fatjar.finalName>EDO-Overlay</fatjar.finalName>

		<!-- Default: skip @Tag("perf") tests. Override with -Dsurefire.excludedGroups= -Dgroups=perf -->
		<surefire.excludedGroups>perf</surefire.excludedGroups>
	</properties>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>software.amazon.awssdk</groupId>
				<artifactId>bom</artifactId>
				<version>2.31.77</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>


		</dependencies>
	</dependencyManagement>

	<dependencies>
		<dependency>
			<groupId>net.java.dev.jna</groupId>
			<artifactId>jna</artifactId>
			<version>5.14.0</version>
		</dependency>

		<dependency>
			<groupId>net.java.dev.jna</groupId>
			<artifactId>jna-platform</artifactId>
			<version>5.14.0</version>
		</dependency>
		<dependency>
			<groupId>com.sun.mail</groupId>
			<artifactId>jakarta.mail</artifactId>
			<version>2.0.1</version>
		</dependency>
		<dependency>
			<groupId>com.sendgrid</groupId>
			<artifactId>sendgrid-java</artifactId>
			<version>4.10.3</version>
		</dependency>

		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-api</artifactId>
			<version>2.25.0</version>
		</dependency>
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-core</artifactId>
			<version>2.25.0</version>
		</dependency>
		<dependency>
			<groupId>software.amazon.awssdk</groupId>
			<artifactId>polly</artifactId>
			<version>2.25.66</version>
		</dependency>
		<dependency>
			<groupId>software.amazon.awssdk</groupId>
			<artifactId>auth</artifactId>
			<version>2.25.66</version>
		</dependency>
		<dependency>
			<groupId>software.amazon.awssdk</groupId>
			<artifactId>regions</artifactId>
			<version>2.25.66</version>
		</dependency>

		<!-- Google Sheets API (prospector log backend) -->
		<dependency>
			<groupId>com.google.apis</groupId>
			<artifactId>google-api-services-sheets</artifactId>
			<version>v4-rev20240514-2.0.0</version>
		</dependency>
		<dependency>
			<groupId>com.google.auth</groupId>
			<artifactId>google-auth-library-oauth2-http</artifactId>
			<version>1.25.0</version>
		</dependency>
		<dependency>
			<groupId>com.google.oauth-client</groupId>
			<artifactId>google-oauth-client-jetty</artifactId>
			<version>1.35.0</version>
		</dependency>

		<!-- SLF4J 1.7 binding for AWS SDK (regions/polly pull slf4j-api 1.7.x, not 2.x). -->
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-simple</artifactId>
			<version>1.7.36</version>
		</dependency>

		<dependency>
			<groupId>software.amazon.awssdk</groupId>
			<artifactId>profiles</artifactId>
			<version>2.25.69</version>
		</dependency>

		<dependency>
			<groupId>com.github.kwhat</groupId>
			<artifactId>jnativehook</artifactId>
			<version>2.2.2</version>
		</dependency>

		<dependency>
			<groupId>com.google.code.gson</groupId>
			<artifactId>gson</artifactId>
			<version>2.11.0</version>
		</dependency>

		<dependency>
			<groupId>org.dce</groupId>
			<artifactId>edo-system-model</artifactId>
			<version>${edo-system-model.version}</version>
		</dependency>

		<dependency>
			<groupId>org.xerial</groupId>
			<artifactId>sqlite-jdbc</artifactId>
			<version>3.46.1.3</version>
		</dependency>

		<dependency>
			<groupId>com.formdev</groupId>
			<artifactId>svgSalamander</artifactId>
			<version>1.1.4</version>
		</dependency>

		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter</artifactId>
			<version>5.10.2</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>com.tngtech.archunit</groupId>
			<artifactId>archunit-junit5</artifactId>
			<version>1.3.0</version>
			<scope>test</scope>
		</dependency>

	</dependencies>

	<build>
		<!-- Name output jar deterministically: target/EDO-Overlay.jar -->
		<finalName>${fatjar.finalName}</finalName>

		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.13.0</version>
				<configuration>
					<release>21</release>
					<compilerArgs>
						<arg>-Alog4j.graalvm.groupId=org.apache.logging.log4j</arg>
						<arg>-Alog4j.graalvm.artifactId=log4j-core</arg>
					</compilerArgs>
				</configuration>
			</plugin>

			<!-- Deterministic unit tests: disable speech/TTS side effects -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.5.4</version>
				<configuration>
					<systemPropertyVariables>
						<edo.test.disableSpeech>true</edo.test.disableSpeech>
						<!-- Isolate SQLite from ~/.edo so session/cache tests do not race the live DB or each other -->
						<edo.cacheDbFile>${project.build.directory}/edo-test-cache.db</edo.cacheDbFile>
						<!--
						  CRITICAL: Preferences.userNodeForPackage is the LIVE OS store (same as the desktop app).
						  isolateUi skips floating-tab restore/persist and overlay bounds writes.
						  It does NOT sandbox all prefs — never TabLayoutPreferences.save/clear from tests;
						  snapshot/restore mining/Google (MiningSheetPrefsTestGuard); prefer in-memory fixtures.
						  See .cursor/rules/junit-live-preferences.mdc and org.dce.ed.TestEnvironment.
						-->
						<edo.test.isolateUi>true</edo.test.isolateUi>
					</systemPropertyVariables>
					<!-- Perf baselines (LargeSystemMapPerfRegressionTest): run with -Dsurefire.excludedGroups= -Dgroups=perf -->
					<excludedGroups>${surefire.excludedGroups}</excludedGroups>
				</configuration>
			</plugin>

			<!-- Fat jar -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-shade-plugin</artifactId>
				<version>3.6.0</version>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>shade</goal>
						</goals>
						<configuration>
							<!-- Produce a single jar (no classifier like
							"-shaded") -->
							<shadedArtifactAttached>false</shadedArtifactAttached>
							<createDependencyReducedPom>false</createDependencyReducedPom>

							<!-- Avoid signature collisions -->
							<filters>
								<filter>
									<artifact>*:*</artifact>
									<excludes>
										<exclude>META-INF/*.SF</exclude>
										<exclude>META-INF/*.DSA</exclude>
										<exclude>META-INF/*.RSA</exclude>
									</excludes>
								</filter>
							</filters>

							<!-- Set Main-Class + merge ServiceLoader resources -->
							<transformers>
								<transformer
									implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
									<mainClass>${main.class}</mainClass>
								</transformer>
								<transformer
									implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer" />
							</transformers>
						</configuration>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-assembly-plugin</artifactId>
				<version>3.7.1</version>
				<executions>
					<execution>
						<id>build-src-zip</id>
						<phase>package</phase>
						<goals>
							<goal>single</goal>
						</goals>
						<configuration>
							<finalName>src</finalName>
							<appendAssemblyId>false</appendAssemblyId>
							<formats>
								<format>zip</format>
							</formats>
							<descriptorRefs>
								<descriptorRef>src</descriptorRef>
							</descriptorRefs>
						</configuration>
					</execution>
				</executions>
			</plugin>


		</plugins>
	</build>
	<profiles>
		<profile>
			<id>installer</id>

			<properties>
				<!-- IMPORTANT: set this to a real JDK home that contains
				bin\jpackage.exe -->
				<jdk.home>${env.JAVA_HOME}</jdk.home>

				<!-- jpackage MSI/exe/install dir name (no spaces → clean RockHound-1.2.3.msi filename) -->
				<app.name>RockHound</app.name>
				<app.version>${project.version}</app.version>

				<!-- Where jpackage will read the jar from -->
				<jpackage.input.dir>${project.build.directory}</jpackage.input.dir>

				<!-- Where the installer will be written -->
				<jpackage.dest.dir>${project.basedir}\dist\installer</jpackage.dest.dir>

				<main.jar>EDO-Overlay.jar</main.jar>
				<vendor>EDO</vendor>
			</properties>

			<build>
				<plugins>
					<plugin>
						<artifactId>maven-resources-plugin</artifactId>
						<version>3.3.1</version>
						<executions>
							<execution>
								<id>copy-jnativehook-dll</id>
								<phase>package</phase>
								<goals>
									<goal>copy-resources</goal>
								</goals>
								<configuration>
									<outputDirectory>${project.build.directory}</outputDirectory>
									<resources>
										<resource>
											<directory>
												${project.basedir}\src\main\resources\native</directory>
											<includes>
												<include>JNativeHook.x86_64.dll</include>
											</includes>
										</resource>
									</resources>
									<overwrite>true</overwrite>
								</configuration>
							</execution>
						</executions>
					</plugin>


					<plugin>
						<groupId>org.codehaus.mojo</groupId>
						<artifactId>exec-maven-plugin</artifactId>
						<version>3.5.0</version>
						<executions>
							<execution>
								<id>jpackage-msi</id>
								<phase>package</phase>
								<goals>
									<goal>exec</goal>
								</goals>
								<configuration>
									<executable>${jdk.home}/bin/jpackage.exe</executable>
									<workingDirectory>${project.basedir}</workingDirectory>

									<arguments>
										<argument>--type</argument>
										<argument>msi</argument>

										<argument>--name</argument>
										<argument>${app.name}</argument>

										<argument>--app-version</argument>
										<argument>${app.version}</argument>

										<argument>--vendor</argument>
										<argument>${vendor}</argument>

										<argument>--input</argument>
										<argument>${jpackage.input.dir}</argument>

										<argument>--main-jar</argument>
										<argument>${main.jar}</argument>

										<argument>--dest</argument>
										<argument>${jpackage.dest.dir}</argument>

										<!-- “nice installer” bits -->
										<argument>--win-menu</argument>
										<argument>--win-shortcut</argument>
										<argument>--win-dir-chooser</argument>

										<!-- Windows jpackage requires .ico. Must match AppIconUtil (zoomed RockHound-window.png); regenerate with scripts/generate-windows-installer-icon.ps1 -->
										<argument>--icon</argument>
										<argument>
											${project.basedir}\src\main\resources\edo.ico</argument>

										<argument>--java-options</argument>
										<argument>-Djava.library.path=$APPDIR</argument>

										<!-- optional JVM tuning -->
										<argument>--java-options</argument>
										<argument>-Xms256m</argument>
										<argument>--java-options</argument>
										<argument>-Xmx1024m</argument>
									</arguments>
								</configuration>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>


</project>
